--- a/src/style.css
+++ b/src/style.css
@@ -1,101 +1,4 @@
-/*
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
- */ 
 
 /* cats */ 
 
@@ -116,13 +19,13 @@ h1{
   text-decoration: solid;
   color:rgb(0, 0, 0);
   text-shadow: 10px;
-  background-color: white;
+  margin-top:100px; 
   
   
 }
 
 .maincontent{
-    padding-top: 10px;
+    padding-top: 5px;
     padding-left:50px;
     padding-right: 50px;
     padding-bottom: 50px;
@@ -131,11 +34,7 @@ h1{
 
 
 
-  
-  .col {
-    padding: 20px;
-  }
-  .col-lg{
+     .col-lg{
       height: 300px;
       overflow: hidden;
       margin: 50px 0;
@@ -145,29 +44,35 @@ h1{
       border-width: 5px;
       border-color: white;
   }
-  
-  .col-lg img{
-    display:block;
-      position: absolute;
-      left: -1000%;
-      right: -1000%;
-      top: -1000%;
-      bottom: -1000%;
-      margin: auto;
-      min-height: 100%;
-      min-width: 100%;
-     
-  }
 
-  .col-lg img:hover{
+    #grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 20px; 
+  padding: 20px;
+}
+
+#grid .col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  
+  padding: 10px;
+  
+}
+
+.col-lg img:hover{
    transform: scale(1.2);
- }
-  .imgrid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-   
-  }
+ } 
+
+#grid img {
+  width: 100%;
+  height: auto;
+  max-width: 300px;
+  border-radius: 8px;
+  object-fit: cover;
+}
 
   .favorite{
     position: absolute;
@@ -178,4 +83,17 @@ h1{
     background-color: red;
   }
 
+  .favoriteCheckbox{
+    display: flex; 
+    flex-direction: row-reverse;
 
+  } 
+
+.Laden{
+  background-color: white;
+
+}
+  
+.breedInformation {
+  background-color: white;
+}
